@@ -26,7 +26,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.lang.model.element.Modifier;
@@ -35,7 +34,6 @@ import org.apiguardian.api.API;
 import org.neo4j.cypherdsl.core.NodeBase;
 import org.neo4j.cypherdsl.core.NodeLabel;
 import org.neo4j.cypherdsl.core.Properties;
-import org.neo4j.cypherdsl.core.utils.Strings;
 
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
@@ -113,8 +111,7 @@ final class NodeImplBuilder extends AbstractModelBuilder<NodeModelBuilder> imple
 	private MethodSpec buildDefaultConstructor() {
 
 		CodeBlock.Builder superCallBuilder = CodeBlock.builder().add("super(");
-		superCallBuilder.add(
-			CodeBlock.join(this.labels.stream().map(l -> CodeBlock.of("$S", l)).collect(Collectors.toList()), ", "));
+		superCallBuilder.add(CodeBlock.join(this.labels.stream().map(l -> CodeBlock.of("$S", l)).toList(), ", "));
 		superCallBuilder.add(")");
 
 		return MethodSpec.constructorBuilder()
@@ -195,13 +192,12 @@ final class NodeImplBuilder extends AbstractModelBuilder<NodeModelBuilder> imple
 			return builder.build();
 		});
 
-		return Stream.concat(Stream.of(defaultInstance), Stream.concat(properties, relationships))
-			.collect(Collectors.toList());
+		return Stream.concat(Stream.of(defaultInstance), Stream.concat(properties, relationships)).toList();
 	}
 
 	static String capitalize(String str) {
 
-		if (!Strings.hasText(str)) {
+		if (str == null || str.isBlank()) {
 			return str;
 		} else {
 			char baseChar = str.charAt(0);
