@@ -29,7 +29,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -107,8 +106,7 @@ public final class SDN6AnnotationProcessor extends AbstractProcessor {
 	static final String NODE_ANNOTATION = "org.springframework.data.neo4j.core.schema.Node";
 	static final String RELATIONSHIP_PROPERTIES_ANNOTATION = "org.springframework.data.neo4j.core.schema.RelationshipProperties";
 	static final String PROPERTY_CUSTOM_CONVERTER_CLASSES = "org.neo4j.cypherdsl.codegen.sdn.custom_converter_classes";
-	static final Set<String> VALID_GENERATED_ID_TYPES = Collections.unmodifiableSet(
-		new HashSet<>(Arrays.asList(Long.class.getName(), long.class.getName())));
+	static final Set<String> VALID_GENERATED_ID_TYPES = Set.of(Long.class.getName(), long.class.getName());
 
 	// Resources
 	// * http://hannesdorfmann.com/annotation-processing/annotationprocessing101/
@@ -438,7 +436,7 @@ public final class SDN6AnnotationProcessor extends AbstractProcessor {
 			Map<FieldType, List<VariableElement>> fields = groupPropertiesAndRelationships.getResult();
 
 			nodeImplBuilder.addProperties(
-				fields.get(FieldType.P).stream().map(this::asPropertyDefinition).collect(Collectors.toList())
+				fields.get(FieldType.P).stream().map(this::asPropertyDefinition).toList()
 			);
 
 			relationshipFields.put(nodeImplBuilder, fields.get(FieldType.R));
@@ -544,8 +542,8 @@ public final class SDN6AnnotationProcessor extends AbstractProcessor {
 						result.put(type, Collections.unmodifiableList(newBuilders));
 					}
 				} else if (owners.size() > 1) {
-					List<NodeModelBuilder> startNodes = definitions.stream().map(d -> d.getValue().getStart()).distinct().collect(Collectors.toList());
-					List<NodeModelBuilder> endNodes = definitions.stream().map(d -> d.getValue().getStart()).distinct().collect(Collectors.toList());
+					List<NodeModelBuilder> startNodes = definitions.stream().map(d -> d.getValue().getStart()).distinct().toList();
+					List<NodeModelBuilder> endNodes = definitions.stream().map(d -> d.getValue().getStart()).distinct().toList();
 
 					relationshipBuilder = RelationshipModelBuilder.create(configuration, owners.stream().findFirst().get().getPackageName(), type);
 					if (startNodes.size() == 1) {
